# jogo_velha_gigante_haskell

./: README.md
functional/: functional.cabal  stack.yaml
functional/src/: Game.hs  Logic.hs  Main.hs  Rendering.hs
