cabal-version:       2.2

name:                functional
version:             0.1.0.0
homepage:            https://github.com/tsoding/profun
license:             MIT
license-file:        LICENSE
author:              Alexey Kutepov <reximkut@gmail.com>
maintainer:          reximkut@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md

executable functional
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
                     , Logic
                     , Rendering
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , gloss
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
